--- a/style.css
+++ b/style.css
@@ -49,4 +49,15 @@ nav ul li a {
   top: 10px;
   left: 10px;
 }
-
+.header {
+  justify-content: space-between;
+  margin:20px;
+  
+}
+.row{
+  display: flex;
+  padding: 0 0 150px;
+  font-family: 'Courier New', Courier, monospace;
+  
+  
+}
