--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav ul li a {
   bottom: 100px;
 }
 .podo{
-  padding-left: 100px;
+  padding-left: 200px;
   display: flex;
   padding: 20px 80px;
   justify-content: space-between;
@@ -78,6 +78,20 @@ nav ul li a {
 }
 .row {
   display: flex;
- flex-wrap: wrap;
- max-width: ;
-  }
+  flex-wrap: wrap;
+  padding: 20px 150px;
+  
+}
+
+.header header{
+	width:200px;
+  height: 50px;
+  margin-left: 600px;
+  background-color: #000000;
+ padding-top: 15px;
+ padding-left: 30px;
+ color:white;
+ margin-top: 30px;
+background-image: url(./img/Rectangle\ \(64\).png);
+}
+
