--- a/style.css
+++ b/style.css
@@ -94,6 +94,42 @@ nav ul li a {
  margin-top: 30px;
 
 }
-.container {
+.blog {
   background-image: url(./img/Rectangle\ \(64\).png);
+  padding: 250px 20px;
+  margin: 20px  10px;
+  justify-content:space-between;
+
+  left: 100px;
+  min-height: 150px;
+  min-width: 250px;
+} 
+.city   {
+background-image: url(./img/Rectangle\ \(65\).png);
+padding: 200px 150px;
+margin-top: -20px;
+
+}
+.city img {
+  background-image: url(./img/Rectangle\ \(67\).png);
+  margin-top: 15px;
+ text-decoration: aliceblues;
+  padding:  50px 45s0px;
+  
+
+}
+.script{
+  margin-top: 150px;
+  padding: 40px 180px;
+  margin-left: 250px;
+}
+.container{
+  padding: 20px 205px;
+  margin-right: 120px;
+  display: flex;
+
+
+}
+.diary{
+  padding:  200px 20px ;
 }
