--- a/style.css
+++ b/style.css
@@ -124,12 +124,19 @@ margin-top: -20px;
   margin-left: 250px;
 }
 .container{
-  padding: 20px 205px;
-  margin-right: 120px;
-  display: flex;
-
+  padding:  5px 90px;
+margin-left: 60px;
+display: flex;
+padding-right: 100px 350px 250px;
 
 }
+
+
 .diary{
-  padding:  200px 20px ;
+ width: 1160px;
+ height: 657px;
+ top: -0.11px;
+ margin-left: 130px;
+ margin-top: 70px;
+
 }
