--- a/style.css
+++ b/style.css
@@ -118,10 +118,14 @@ margin-top: -20px;
   
 
 }
-.script{
+.script {
   margin-top: 150px;
   padding: 40px 180px;
   margin-left: 250px;
+  display: flex;
+  justify-content: space-between;
+  text-shadow: 20px;
+
 }
 .container{
   padding:  5px 90px;
@@ -139,8 +143,9 @@ padding-right: 100px 350px 250px;
  margin-left: 130px;
  margin-top: 70px;
  font-style:initial;
+
 }
-.bonagua{
+.bonagua {
   background-image: url(./img/Rectangle\ \(73\).png);
   padding: 210px;
   margin-top: 120px;
