--- a/style.css
+++ b/style.css
@@ -105,10 +105,13 @@ nav ul li a {
   min-height: 150px;
   min-width: 250px;
 } 
+.message {
+  margin-left: 1100px;
+  margin-top: -250px;
+}
 .city   {
 background-image: url(./img/Rectangle\ \(65\).png);
 padding: 200px 150px;
-margin-top: -20px;
 
 }
 .city img {
@@ -153,6 +156,8 @@ padding-right: 100px 350px 250px;
   color: white;
   font-style:inherit;
   font-size: 35px;
+  margin-right: 250px;
+  
   
 }
 
